--- a/portfolio/items/USA Power/index.html
+++ b/portfolio/items/USA Power/index.html
@@ -53,8 +53,11 @@
     <!-- <div id="map-a" style="width: 64%; padding-bottom: 64%; left: 100px; top: 50px; border-radius: 50%; border: 3px solid #f99080"></div> -->
     <!-- <div id="map-a" style="width: 55%; padding-bottom: 55%; left: 400px; top: 100px; border-radius: 50%; border: 2px solid #f99080"></div> -->
 
+    <!-- <div id="map-b" style="position: absolute; width: 60%; padding-bottom: 60%; right: 0px; top: 0px; border-radius: 0% 0% 0% 50%; border: 1px solid #f99080"></div> -->
     <div id="map-b" style="position: absolute; width: 60%; padding-bottom: 60%; right: 0px; top: 0px; border-radius: 0% 0% 0% 50%"></div>
-    <div id="map-a" style="position: absolute; width: 47%; padding-bottom: 47%; left: 3%; top: 6%; border-radius: 50%; border: 1px solid #f99080"></div>
+    <div id="map-a" style="position: absolute; width: 47%; padding-bottom: 47%; left: 3%; top: 6%; border-radius: 50%; border: 2px solid #f99080"></div>
+    <div id="map-c" style="position: absolute; width: 47%; padding-bottom: 47%; left: 3%; top: 6%; border-radius: 0%; border: 2px solid rgba(0,300,0,10); pointer-events:none;"></div>
+    <!-- <div id="map-c" style="position: absolute; width: 47%; padding-bottom: 47%; left: 3%; top: 6%; border-radius: 50%; border: 2px solid rgba(0,0,0,0); pointer-events:none;"></div> -->
 
     <!-- <div class="container-xxl text-center">
       <div class="row">
@@ -138,7 +141,9 @@
     </script> -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> -->
     <script src="easing-functions.js"></script>
+    <script src="data.js"></script>
     <script src="maps.js"></script>
     <script src="maps-b.js"></script>
+    <script src="maps-c.js"></script>
   </body>
 </html>
